parser.output
Terminals unused in grammar

   REPITA
   VERDADEIRO
   FALSO
   COMO
   SAIDA
   ENTRADA
   LIGAR
   DESLIGAR
   LER_DIGITAL
   LER_ANALOGICO
   PWM
   COM
   FREQUENCIA
   RESOLUCAO
   AJUSTAR_PWM
   CONECTAR_WIFI
   SENHA
   ENVIAR_HTTP
   DADOS
   CONFIGURAR_SERIAL
   ESCREVER_SERIAL
   LER_SERIAL
   ESPERAR
   IGUAL
   DIFERENTE
   MENOR
   MAIOR
   MENOR_OU_IGUAL
   MAIOR_OU_IGUAL
   '('
   ')'
   FIM


Grammar

    0 $accept: programa $end

    1 programa: comando
    2         | programa comando

    3 comando: CONFIG CONFIGURAR IDENTIFICADOR
    4        | VAR tipo IDENTIFICADOR ATRIBUICAO expressao
    5        | SE expressao ENTAO comando SENAO comando
    6        | ENQUANTO expressao comando

    7 tipo: INTEIRO
    8     | BOOLEANO
    9     | TEXTO

   10 expressao: expressao SOMA termo
   11          | expressao SUBTRACAO termo
   12          | termo

   13 termo: termo MULTIPLICACAO fator
   14      | termo DIVISAO fator
   15      | fator

   16 fator: IDENTIFICADOR
   17      | INTEIRO_LITERAL
   18      | TEXTO_LITERAL


Terminals, with rules where they appear

$end (0) 0
'(' (40)
')' (41)
error (256)
REPITA (258)
VERDADEIRO (259)
FALSO (260)
COMO (261)
SAIDA (262)
ENTRADA (263)
LIGAR (264)
DESLIGAR (265)
LER_DIGITAL (266)
LER_ANALOGICO (267)
PWM (268)
COM (269)
FREQUENCIA (270)
RESOLUCAO (271)
AJUSTAR_PWM (272)
CONECTAR_WIFI (273)
SENHA (274)
ENVIAR_HTTP (275)
DADOS (276)
CONFIGURAR_SERIAL (277)
ESCREVER_SERIAL (278)
LER_SERIAL (279)
ESPERAR (280)
TEXTO_LITERAL (281) 18
INTEIRO_LITERAL (282) 17
IDENTIFICADOR (283) 3 4 16
CONFIGURAR (284) 3
CONFIG (285) 3
VAR (286) 4
SE (287) 5
ENTAO (288) 5
SENAO (289) 5
ENQUANTO (290) 6
INTEIRO (291) 7
BOOLEANO (292) 8
TEXTO (293) 9
ATRIBUICAO (294) 4
SOMA (295) 10
SUBTRACAO (296) 11
MULTIPLICACAO (297) 13
DIVISAO (298) 14
IGUAL (299)
DIFERENTE (300)
MENOR (301)
MAIOR (302)
MENOR_OU_IGUAL (303)
MAIOR_OU_IGUAL (304)
FIM (305)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
programa (54)
    on left: 1 2, on right: 0 2
comando (55)
    on left: 3 4 5 6, on right: 1 2 5 6
tipo (56)
    on left: 7 8 9, on right: 4
expressao (57)
    on left: 10 11 12, on right: 4 5 6 10 11
termo (58)
    on left: 13 14 15, on right: 10 11 12 13 14
fator (59)
    on left: 16 17 18, on right: 13 14 15


state 0

    0 $accept: . programa $end
    1 programa: . comando
    2         | . programa comando
    3 comando: . CONFIG CONFIGURAR IDENTIFICADOR
    4        | . VAR tipo IDENTIFICADOR ATRIBUICAO expressao
    5        | . SE expressao ENTAO comando SENAO comando
    6        | . ENQUANTO expressao comando

    CONFIG    shift, and go to state 1
    VAR       shift, and go to state 2
    SE        shift, and go to state 3
    ENQUANTO  shift, and go to state 4

    programa  go to state 5
    comando   go to state 6


state 1

    3 comando: CONFIG . CONFIGURAR IDENTIFICADOR

    CONFIGURAR  shift, and go to state 7


state 2

    4 comando: VAR . tipo IDENTIFICADOR ATRIBUICAO expressao
    7 tipo: . INTEIRO
    8     | . BOOLEANO
    9     | . TEXTO

    INTEIRO   shift, and go to state 8
    BOOLEANO  shift, and go to state 9
    TEXTO     shift, and go to state 10

    tipo  go to state 11


state 3

    5 comando: SE . expressao ENTAO comando SENAO comando
   10 expressao: . expressao SOMA termo
   11          | . expressao SUBTRACAO termo
   12          | . termo
   13 termo: . termo MULTIPLICACAO fator
   14      | . termo DIVISAO fator
   15      | . fator
   16 fator: . IDENTIFICADOR
   17      | . INTEIRO_LITERAL
   18      | . TEXTO_LITERAL

    TEXTO_LITERAL    shift, and go to state 12
    INTEIRO_LITERAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    expressao  go to state 15
    termo      go to state 16
    fator      go to state 17


state 4

    6 comando: ENQUANTO . expressao comando
   10 expressao: . expressao SOMA termo
   11          | . expressao SUBTRACAO termo
   12          | . termo
   13 termo: . termo MULTIPLICACAO fator
   14      | . termo DIVISAO fator
   15      | . fator
   16 fator: . IDENTIFICADOR
   17      | . INTEIRO_LITERAL
   18      | . TEXTO_LITERAL

    TEXTO_LITERAL    shift, and go to state 12
    INTEIRO_LITERAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    expressao  go to state 18
    termo      go to state 16
    fator      go to state 17


state 5

    0 $accept: programa . $end
    2 programa: programa . comando
    3 comando: . CONFIG CONFIGURAR IDENTIFICADOR
    4        | . VAR tipo IDENTIFICADOR ATRIBUICAO expressao
    5        | . SE expressao ENTAO comando SENAO comando
    6        | . ENQUANTO expressao comando

    $end      shift, and go to state 19
    CONFIG    shift, and go to state 1
    VAR       shift, and go to state 2
    SE        shift, and go to state 3
    ENQUANTO  shift, and go to state 4

    comando  go to state 20


state 6

    1 programa: comando .

    $default  reduce using rule 1 (programa)


state 7

    3 comando: CONFIG CONFIGURAR . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 21


state 8

    7 tipo: INTEIRO .

    $default  reduce using rule 7 (tipo)


state 9

    8 tipo: BOOLEANO .

    $default  reduce using rule 8 (tipo)


state 10

    9 tipo: TEXTO .

    $default  reduce using rule 9 (tipo)


state 11

    4 comando: VAR tipo . IDENTIFICADOR ATRIBUICAO expressao

    IDENTIFICADOR  shift, and go to state 22


state 12

   18 fator: TEXTO_LITERAL .

    $default  reduce using rule 18 (fator)


state 13

   17 fator: INTEIRO_LITERAL .

    $default  reduce using rule 17 (fator)


state 14

   16 fator: IDENTIFICADOR .

    $default  reduce using rule 16 (fator)


state 15

    5 comando: SE expressao . ENTAO comando SENAO comando
   10 expressao: expressao . SOMA termo
   11          | expressao . SUBTRACAO termo

    ENTAO      shift, and go to state 23
    SOMA       shift, and go to state 24
    SUBTRACAO  shift, and go to state 25


state 16

   12 expressao: termo .  [$end, CONFIG, VAR, SE, ENTAO, SENAO, ENQUANTO, SOMA, SUBTRACAO]
   13 termo: termo . MULTIPLICACAO fator
   14      | termo . DIVISAO fator

    MULTIPLICACAO  shift, and go to state 26
    DIVISAO        shift, and go to state 27

    $default  reduce using rule 12 (expressao)


state 17

   15 termo: fator .

    $default  reduce using rule 15 (termo)


state 18

    3 comando: . CONFIG CONFIGURAR IDENTIFICADOR
    4        | . VAR tipo IDENTIFICADOR ATRIBUICAO expressao
    5        | . SE expressao ENTAO comando SENAO comando
    6        | . ENQUANTO expressao comando
    6        | ENQUANTO expressao . comando
   10 expressao: expressao . SOMA termo
   11          | expressao . SUBTRACAO termo

    CONFIG     shift, and go to state 1
    VAR        shift, and go to state 2
    SE         shift, and go to state 3
    ENQUANTO   shift, and go to state 4
    SOMA       shift, and go to state 24
    SUBTRACAO  shift, and go to state 25

    comando  go to state 28


state 19

    0 $accept: programa $end .

    $default  accept


state 20

    2 programa: programa comando .

    $default  reduce using rule 2 (programa)


state 21

    3 comando: CONFIG CONFIGURAR IDENTIFICADOR .

    $default  reduce using rule 3 (comando)


state 22

    4 comando: VAR tipo IDENTIFICADOR . ATRIBUICAO expressao

    ATRIBUICAO  shift, and go to state 29


state 23

    3 comando: . CONFIG CONFIGURAR IDENTIFICADOR
    4        | . VAR tipo IDENTIFICADOR ATRIBUICAO expressao
    5        | . SE expressao ENTAO comando SENAO comando
    5        | SE expressao ENTAO . comando SENAO comando
    6        | . ENQUANTO expressao comando

    CONFIG    shift, and go to state 1
    VAR       shift, and go to state 2
    SE        shift, and go to state 3
    ENQUANTO  shift, and go to state 4

    comando  go to state 30


state 24

   10 expressao: expressao SOMA . termo
   13 termo: . termo MULTIPLICACAO fator
   14      | . termo DIVISAO fator
   15      | . fator
   16 fator: . IDENTIFICADOR
   17      | . INTEIRO_LITERAL
   18      | . TEXTO_LITERAL

    TEXTO_LITERAL    shift, and go to state 12
    INTEIRO_LITERAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    termo  go to state 31
    fator  go to state 17


state 25

   11 expressao: expressao SUBTRACAO . termo
   13 termo: . termo MULTIPLICACAO fator
   14      | . termo DIVISAO fator
   15      | . fator
   16 fator: . IDENTIFICADOR
   17      | . INTEIRO_LITERAL
   18      | . TEXTO_LITERAL

    TEXTO_LITERAL    shift, and go to state 12
    INTEIRO_LITERAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    termo  go to state 32
    fator  go to state 17


state 26

   13 termo: termo MULTIPLICACAO . fator
   16 fator: . IDENTIFICADOR
   17      | . INTEIRO_LITERAL
   18      | . TEXTO_LITERAL

    TEXTO_LITERAL    shift, and go to state 12
    INTEIRO_LITERAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    fator  go to state 33


state 27

   14 termo: termo DIVISAO . fator
   16 fator: . IDENTIFICADOR
   17      | . INTEIRO_LITERAL
   18      | . TEXTO_LITERAL

    TEXTO_LITERAL    shift, and go to state 12
    INTEIRO_LITERAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    fator  go to state 34


state 28

    6 comando: ENQUANTO expressao comando .

    $default  reduce using rule 6 (comando)


state 29

    4 comando: VAR tipo IDENTIFICADOR ATRIBUICAO . expressao
   10 expressao: . expressao SOMA termo
   11          | . expressao SUBTRACAO termo
   12          | . termo
   13 termo: . termo MULTIPLICACAO fator
   14      | . termo DIVISAO fator
   15      | . fator
   16 fator: . IDENTIFICADOR
   17      | . INTEIRO_LITERAL
   18      | . TEXTO_LITERAL

    TEXTO_LITERAL    shift, and go to state 12
    INTEIRO_LITERAL  shift, and go to state 13
    IDENTIFICADOR    shift, and go to state 14

    expressao  go to state 35
    termo      go to state 16
    fator      go to state 17


state 30

    5 comando: SE expressao ENTAO comando . SENAO comando

    SENAO  shift, and go to state 36


state 31

   10 expressao: expressao SOMA termo .  [$end, CONFIG, VAR, SE, ENTAO, SENAO, ENQUANTO, SOMA, SUBTRACAO]
   13 termo: termo . MULTIPLICACAO fator
   14      | termo . DIVISAO fator

    MULTIPLICACAO  shift, and go to state 26
    DIVISAO        shift, and go to state 27

    $default  reduce using rule 10 (expressao)


state 32

   11 expressao: expressao SUBTRACAO termo .  [$end, CONFIG, VAR, SE, ENTAO, SENAO, ENQUANTO, SOMA, SUBTRACAO]
   13 termo: termo . MULTIPLICACAO fator
   14      | termo . DIVISAO fator

    MULTIPLICACAO  shift, and go to state 26
    DIVISAO        shift, and go to state 27

    $default  reduce using rule 11 (expressao)


state 33

   13 termo: termo MULTIPLICACAO fator .

    $default  reduce using rule 13 (termo)


state 34

   14 termo: termo DIVISAO fator .

    $default  reduce using rule 14 (termo)


state 35

    4 comando: VAR tipo IDENTIFICADOR ATRIBUICAO expressao .  [$end, CONFIG, VAR, SE, SENAO, ENQUANTO]
   10 expressao: expressao . SOMA termo
   11          | expressao . SUBTRACAO termo

    SOMA       shift, and go to state 24
    SUBTRACAO  shift, and go to state 25

    $default  reduce using rule 4 (comando)


state 36

    3 comando: . CONFIG CONFIGURAR IDENTIFICADOR
    4        | . VAR tipo IDENTIFICADOR ATRIBUICAO expressao
    5        | . SE expressao ENTAO comando SENAO comando
    5        | SE expressao ENTAO comando SENAO . comando
    6        | . ENQUANTO expressao comando

    CONFIG    shift, and go to state 1
    VAR       shift, and go to state 2
    SE        shift, and go to state 3
    ENQUANTO  shift, and go to state 4

    comando  go to state 37


state 37

    5 comando: SE expressao ENTAO comando SENAO comando .

    $default  reduce using rule 5 (comando)
